# league-rpc

./: .gitignore  README.md  dev.requirements.txt  league-rpc-auto-launcher.sh  league-rpc-linux.spec  pyproject.toml  requirements.txt
.github/workflows/: discord-release-msg.yml
league_rpc/: __main__.py  __version__.py  champion.py  gametime.py  kda.py  latest_version.py  reconnect.py  username.py
league_rpc/disable_native_rpc/: disable.py
league_rpc/lcu_api/: base_data.py  helpers.py  lcu_connector.py
league_rpc/logger/: richlogger.py
league_rpc/models/: client_data.py  module_data.py  rpc_data.py  rpc_updater.py
league_rpc/models/lcu/: current_chat_status.py  current_lobby.py  current_queue.py  current_ranked_stats.py  current_summoner.py  gameflow_phase.py
league_rpc/processes/: process.py
league_rpc/utils/: color.py  const.py  launch_league.py  polling.py
league_rpc_linux/: __main__.py  champion.py  colors.py  const.py  gamemode.py  gametime.py  kda.py  latest_version.py  lobby.py  polling.py  reconnect.py  username.py
league_rpc_linux/lcu/: LCU.py
league_rpc_linux/lcu_api/: base_data.py  current_ranked_stats.py  lcu_connector.py
league_rpc_linux/models/: client_data.py  module_data.py  rpc_updater.py
league_rpc_linux/models/lcu/: current_chat_status.py  current_lobby.py  current_queue.py  current_ranked_stats.py  current_summoner.py  gameflow_phase.py
league_rpc_linux/processes/: LCU_Thread.py  lcu_thread.py  process.py
